# yaskk

./: .gitignore  .null-ls_378057_meson.build  README.md  build.zig  build.zig.zon  conf.h  dict.c  dict.cpp  dict.h  key.h  line.c  line.cpp  line.h  main.cpp  makefile  meson.build  skk.c  skk.cpp  skk.h  utf8.c  utf8.cpp  utf8.h  util.c  util.cpp  util.h  yaskk.c  yaskk.cpp  yaskk.h
tools/: dict_builder.sh  sortdict.c
